*pythonpy-0.4.2 (17 Apr 2015)

  17 Apr 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +pythonpy-0.4.2.ebuild, -pythonpy-0.4.0.ebuild:
  sys-apps/pythonpy: version bump

*pythonpy-0.4.0 (27 Mar 2015)

  27 Mar 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +pythonpy-0.4.0.ebuild, -pythonpy-0.3.8.ebuild:
  sys-apps/pythonpy: version bump

*pythonpy-0.3.8 (10 Mar 2015)

  10 Mar 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +pythonpy-0.3.8.ebuild, pythonpy-9999.ebuild:
  sys-apps/pythonpy: fix setup.py **** and versioned ebuild

  05 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  pythonpy-9999.ebuild:
  sys-apps/pythonpy: update nightly for distutils

  16 Aug 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  pythonpy-9999.ebuild:
  sys-apps/pythonpy: allow python3_2

  16 Aug 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  pythonpy-9999.ebuild:
  sys-apps/pythonpy: another escape bug + unconditional zshcomp

  16 Aug 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  pythonpy-9999.ebuild:
  sys-apps/pythonpy: fixed quoting fail

*pythonpy-9999 (16 Aug 2014)

  16 Aug 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +files/py.bashcomp, +files/py.zshcomp, +metadata.xml, +pythonpy-9999.ebuild:
  sys-apps/pythonpy: new ebuild