@@ -1,18 +1,14 @@
-# Copyright 1999-2015 Gentoo Foundation
+# Copyright 1999-2017 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: $
-#!/bin/bash
 
-EAPI=5
+EAPI=6
 
-PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} )
-inherit bash-completion-r1 distutils-r1 vcs-snapshot
-
-COMMIT=22fca19952c391f1665a2f1448e75dc2202b994a
+PYTHON_COMPAT=( python{2_7,3_4,3_5,3_6} )
+inherit bash-completion-r1 distutils-r1
 
 DESCRIPTION="python -c, with tab completion and shorthand"
 HOMEPAGE="https://github.com/Russell91/pythonpy"
-SRC_URI="https://github.com/Russell91/pythonpy/tarball/$COMMIT -> $P.tar.gz"
+SRC_URI="https://github.com/Russell91/pythonpy/archive/v${PV}.zip -> ${P}.zip"
 
 LICENSE="MIT"
 SLOT="0"
@@ -23,14 +19,15 @@ DEPEND="${PYTHON_DEPS}"
 RDEPEND="${DEPEND}"
 
 src_prepare() {
-	# remove broken check for completion dirs
-	sed -i -e '/tempfile.TemporaryFile/d' setup.py || die
+	# don't autoinstall completion files
+	sed -i -e '/package_data=/d' -e '/scripts=/d' setup.py || die
+
+	default
 }
 
 src_install() {
 	distutils-r1_src_install
 
-	rm -r "${D}/usr/bash_completion.d"
 	newbashcomp "${FILESDIR}/py.bashcomp" py
 	insinto /usr/share/zsh/site-functions
 	newins "${FILESDIR}/py.zshcomp" _py
