@@ -1,3 +1,10 @@
+*pythonpy-0.4.11b (30 Mar 2017)
+
+  30 Mar 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +pythonpy-0.4.11b.ebuild, -pythonpy-0.4.2.ebuild, files/py.bashcomp,
+  metadata.xml, pythonpy-9999.ebuild:
+  sys-apps/pythonpy: version bump
+
 *pythonpy-0.4.2 (17 Apr 2015)
 
   17 Apr 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
